Use ESPAsyncWiFiManager instead of coded credentials. Enable OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env]
 framework = arduino
 platform = espressif32 @ ^6.9.0
 lib_deps = https://github.com/maditnerd/es8388
     https://github.com/schreibfaul1/ESP32-audioI2S
     https://github.com/schreibfaul1/AC101
+	https://github.com/me-no-dev/ESPAsyncWebServer.git    
+	alanswx/ESPAsyncWiFiManager
+lib_compat_mode = strict
+
 ; board_build.partitions = no_ota.csv
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
@@ -27,15 +32,20 @@ monitor_filters = esp32_exception_decoder
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388]
 board = esp32doit-devkit-v1
 build_flags =
-    '-DBOARD_HAS_PSRAM',
+    '-DBOARD_HAS_PSRAM'
     '-DAC2USE_ES8388'
 lib_deps =
     ${env.lib_deps}
 
+[env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388-OTA]
+extends = env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388
+upload_protocol = espota
+upload_port = esp32-268044.home
+
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
 build_flags =
-    '-DBOARD_HAS_PSRAM',
+    '-DBOARD_HAS_PSRAM'
     '-DAC2USE_AC101'
 lib_deps =
     ${env.lib_deps}
