Support for webcontrol as a sample.

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,7 @@ lib_deps =
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388-OTA]
 extends = env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388
 upload_protocol = espota
-upload_port = esp32-268044.home
+upload_port = A1S-Radio-448026455F34.home
 
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
