--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ monitor_filters = esp32_exception_decoder
 board = esp32doit-devkit-v1
 build_flags =
     '-DBOARD_HAS_PSRAM'
-    '-DAC2USE_ES8388'
+    '-DDAC2USE_ES8388'
 lib_deps =
     ${env.lib_deps}
 
@@ -47,6 +47,6 @@ upload_port = A1S-Radio-448026455F34.home
 board = esp32doit-devkit-v1
 build_flags =
     '-DBOARD_HAS_PSRAM'
-    '-DAC2USE_AC101'
+    '-DDAC2USE_AC101'
 lib_deps =
     ${env.lib_deps}
