--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,13 @@ platform = espressif32 @ ^6.9.0
 lib_deps = https://github.com/maditnerd/es8388
     https://github.com/schreibfaul1/ESP32-audioI2S
     https://github.com/schreibfaul1/AC101
-	https://github.com/me-no-dev/ESPAsyncWebServer.git    
+	ayushsharma82/ElegantOTA
 	alanswx/ESPAsyncWiFiManager
     https://github.com/LennartHennigs/Button2
     https://github.com/madhephaestus/ESP32Encoder
+    adafruit/Adafruit SSD1306 @ ^2.5.13
+    adafruit/Adafruit GFX Library @ ^1.11.11
+	; olikraus/U8g2
     ; https://github.com/igorantolic/ai-esp32-rotary-encoder.git
 lib_compat_mode = strict
 
@@ -29,12 +32,18 @@ monitor_speed = 115200
 upload_speed = 921600
 ;monitor_filters = time, colorize, esp32_exception_decoder
 monitor_filters = esp32_exception_decoder
+build_flags = -DPIO_ENV='"$PIOENV"'
+	-DGIT_BRANCH='"${sysenv.git_branch}"'
+	-DGIT_SHA_SHORT='"${sysenv.git_sha_short}"'
+	-DGIT_COMMIT_TIME='"${sysenv.git_commit_time}"'
+	-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
 
 
 # AI Thinker ESP32 Audio Kit V2.2 on 
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388]
 board = esp32doit-devkit-v1
 build_flags =
+    ${env.build_flags}
     '-DBOARD_HAS_PSRAM'
     '-DDAC2USE_ES8388'
 lib_deps =
@@ -48,6 +57,7 @@ upload_port = A1S-Radio-448026455F34.home
 [env:AI-Thinker-ESP32-Aduti-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
 build_flags =
+    ${env.build_flags}
     '-DBOARD_HAS_PSRAM'
     '-DDAC2USE_AC101'
 lib_deps =
