Feature to change stations via rotary encoder. Feature to modify the station list.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps = https://github.com/maditnerd/es8388
 	alanswx/ESPAsyncWiFiManager
     https://github.com/LennartHennigs/Button2
     https://github.com/madhephaestus/ESP32Encoder
+    bblanchon/ArduinoJson @ ^7.3.0
     adafruit/Adafruit SSD1306 @ ^2.5.13
     adafruit/Adafruit GFX Library @ ^1.11.11
 	; olikraus/U8g2
