--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,11 @@
 
 [env]
 framework = arduino
-platform = espressif32 @ ^6.9.0
-lib_deps = https://github.com/maditnerd/es8388
-    https://github.com/schreibfaul1/ESP32-audioI2S
+; platform = espressif32 @ ^6.9.0
+platform = espressif32 @ 6.10.0
+lib_deps = https://github.com/maditnerd/es8388    
+    esphome/ESP32-audioI2S @ ^2.0.7
+    ; https://github.com/schreibfaul1/ESP32-audioI2S @ ^3.0.12
     https://github.com/schreibfaul1/AC101
 	ayushsharma82/ElegantOTA
 	alanswx/ESPAsyncWiFiManager
@@ -33,7 +35,9 @@ monitor_speed = 115200
 upload_speed = 921600
 ;monitor_filters = time, colorize, esp32_exception_decoder
 monitor_filters = esp32_exception_decoder
-build_flags = -DPIO_ENV='"$PIOENV"'
+build_flags = 
+    '-DBOARD_HAS_PSRAM'
+    -DPIO_ENV='"$PIOENV"'
 	-DGIT_BRANCH='"${sysenv.git_branch}"'
 	-DGIT_SHA_SHORT='"${sysenv.git_sha_short}"'
 	-DGIT_COMMIT_TIME='"${sysenv.git_commit_time}"'
@@ -41,25 +45,28 @@ build_flags = -DPIO_ENV='"$PIOENV"'
 
 
 # AI Thinker ESP32 Audio Kit V2.2 on 
-[env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388]
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388]
 board = esp32doit-devkit-v1
 build_flags =
     ${env.build_flags}
-    '-DBOARD_HAS_PSRAM'
     '-DDAC2USE_ES8388'
 lib_deps =
     ${env.lib_deps}
 
-[env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388-OTA]
-extends = env:AI-Thinker-ESP32-Aduti-Kit-V2_2-ES8388
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-1]
+extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-448026455F34.home
 
-[env:AI-Thinker-ESP32-Aduti-Kit-V2_2-AC101]
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-2]
+extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
+upload_protocol = espota
+upload_port = A1S-Radio-9cfab1f7a608.home
+
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
 build_flags =
     ${env.build_flags}
-    '-DBOARD_HAS_PSRAM'
     '-DDAC2USE_AC101'
 lib_deps =
     ${env.lib_deps}
