Update some versions and fetch audio meta data from json url like radio rock norge sends out.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,21 @@
 [env]
 framework = arduino
 ; platform = espressif32 @ ^6.9.0
-platform = espressif32 @ 6.10.0
-lib_deps = https://github.com/maditnerd/es8388    
-    esphome/ESP32-audioI2S @ ^2.0.7
+; platform = espressif32 @ 6.10.0
+; platform = https://github.com/platformio/platform-espressif32.git#v6.10.0
+; platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.1.1
+; platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+
+lib_deps =
     ; https://github.com/schreibfaul1/ESP32-audioI2S @ ^3.0.12
+    https://github.com/schreibfaul1/ESP32-audioI2S
     https://github.com/schreibfaul1/AC101
+    ; https://github.com/maditnerd/es8388
+    https://github.com/schreibfaul1/es8388
 	ayushsharma82/ElegantOTA
 	alanswx/ESPAsyncWiFiManager
-    https://github.com/LennartHennigs/Button2
+    ; https://github.com/LennartHennigs/Button2
     https://github.com/madhephaestus/ESP32Encoder
     bblanchon/ArduinoJson @ ^7.3.0
     adafruit/Adafruit SSD1306 @ ^2.5.13
