--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ lib_deps =
     https://github.com/schreibfaul1/AC101
     ; https://github.com/maditnerd/es8388
     https://github.com/schreibfaul1/es8388
+    https://github.com/pschatzmann/arduino-audio-tools
+    https://github.com/pschatzmann/arduino-libhelix
 	ayushsharma82/ElegantOTA
 	alanswx/ESPAsyncWiFiManager
     ; https://github.com/LennartHennigs/Button2
@@ -43,6 +45,7 @@ upload_speed = 921600
 ;monitor_filters = time, colorize, esp32_exception_decoder
 monitor_filters = esp32_exception_decoder
 build_flags = 
+    -DLAST_BUILD_TIME=$UNIX_TIME
     '-DBOARD_HAS_PSRAM'
     -DPIO_ENV='"$PIOENV"'
 	-DGIT_BRANCH='"${sysenv.git_branch}"'
@@ -60,15 +63,23 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
 
-[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-1]
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-1-BATHROOM]
 extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-448026455F34.home
 
-[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-2]
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-2-DEV]
 extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-9cfab1f7a608.home
+
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-3-BASEMENT]
+extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
+upload_protocol = espota
+upload_port = a1s-radio-a4f7b1f7a608.home
+build_flags =
+    ${env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388.build_flags}
+    '-DUSE_ARDUINO_AUDIO_TOOLS'
 
 [env:AI-Thinker-ESP32-Audio-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
