Add clock and revamp some parts of the webif.

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,7 +68,12 @@ extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-448026455F34.home
 
-[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-2-DEV]
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-2-OLDBOX]
+extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
+upload_protocol = espota
+upload_port = A1S-Radio-D0F7B1F7A608.home
+
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-99-DEV]
 extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-9cfab1f7a608.home
@@ -80,6 +85,16 @@ upload_port = a1s-radio-a4f7b1f7a608.home
 build_flags =
     ${env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388.build_flags}
     '-DUSE_ARDUINO_AUDIO_TOOLS'
+
+[env:ESP32S3-OTA-3-BASEMENT]
+board = lolin_s3
+upload_protocol = espota
+upload_port = a1s-radio-a4f7b1f7a608.home
+build_flags =
+    ${env.build_flags}
+    '-DUSE_ARDUINO_AUDIO_TOOLS'
+lib_deps =
+    ${env.lib_deps}
 
 [env:AI-Thinker-ESP32-Audio-Kit-V2_2-AC101]
 board = esp32doit-devkit-v1
