--- a/platformio.ini
+++ b/platformio.ini
@@ -73,6 +73,13 @@ extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
 upload_port = A1S-Radio-D0F7B1F7A608.home
 
+[env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-4-GUESTBATHROOM]
+extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
+upload_protocol = espota
+upload_port = A1S-Radio-706D26455F34.home
+
+
+
 [env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388-OTA-99-DEV]
 extends = env:AI-Thinker-ESP32-Audio-Kit-V2_2-ES8388
 upload_protocol = espota
